--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,12 +1,13 @@
 spring.application.name=comidas
 
-spring.datasource.url=jdbc:h2:mem:testdb
+spring.datasource.url=jdbc:h2:file:./h2-database
 spring.datasource.username=sa
 spring.datasource.password=
 
 # Configuração do cliente web do banco H2
 spring.h2.console.enabled=true
 spring.h2.console.path=/h2-console
+spring.jpa.hibernate.ddl-auto=update
 
 # Configuração para mostrar o SQL no console
 spring.jpa.show-sql=true
